# reddit-saved-pptx

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
reddit_saved_pptx/: __main__.py
templates/: base.jinja2
